// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decrement 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Object {
    \\"counter\\": Object {
-     \\"value\\": 0,
+     \\"value\\": -1,
    },
  }"
`;

exports[`increment 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Object {
    \\"counter\\": Object {
-     \\"value\\": 0,
+     \\"value\\": 1,
    },
  }"
`;
